# lethe

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  entrypoint.sh  install.sh  plan.md  pyproject.toml  uninstall.sh  update.sh
config/: identity.md  tools.md
config/blocks/: identity.md  persona.md  tools.md
config/prompts/: actor_initial_message.md  actor_principal_preamble.md  actor_principal_rules.md  actor_subagent_preamble.md  actor_subagent_rules.md  actor_workspace_context.md  agent_history_summary.md  agent_system_fallback.md  amygdala_round_message.md  amygdala_seed_system.md  amygdala_seed_user.md  amygdala_system.md  dmn_round_message.md  dmn_system.md  heartbeat_message.md  heartbeat_message_full.md  heartbeat_summarize.md  hippocampus_analyze.md  hippocampus_relevance.md  hippocampus_summarize.md  llm_heartbeat_system.md  llm_summarize.md
examples/: actor_demo.py
scripts/: install.sh  migrate_from_letta.py  update.sh
src/lethe/: __init__.py  heartbeat.py  main.py  prompts.py  utils.py  worker.py
src/lethe/actor/: __init__.py  amygdala.py  brainstem.py  dmn.py  integration.py  runner.py  tools.py
src/lethe/agent/: __init__.py
src/lethe/config/: __init__.py
src/lethe/console/: __init__.py  ui.py
src/lethe/conversation/: __init__.py
src/lethe/hippocampus/: __init__.py
src/lethe/memory/: __init__.py  archival.py  blocks.py  codex_oauth.py  hippocampus.py  llm.py  messages.py  openai_oauth.py  store.py
src/lethe/telegram/: __init__.py
src/lethe/tools/: __init__.py  browser_stagehand.py  codex_login.py  oauth_login.py  oauth_login_anthropic.py  oauth_login_openai.py  telegram_tools.py  web_search.py
tests/: test_actor.py  test_architecture_integration.py  test_blocks.py  test_brainstem_auth_mode.py  test_conversation.py  test_dmn.py  test_hippocampus.py  test_openai_oauth.py  test_tools.py  test_truncate.py
