[project]
name = "lethe"
version = "0.10.3"
description = "Autonomous executive assistant with local memory and LLM"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.24.0",
    "aiosqlite>=0.22.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.0",
    "rich>=13.9.0",
    "pyte>=0.8.0", # Terminal emulator for TUI capture
    "pillow>=12.1.0",
    "lancedb>=0.27.1",
    "sentence-transformers>=5.2.2",
    "python-dotenv>=1.2.1",
    "litellm>=1.81.6",
    "nicegui>=3.7.1",
    "psutil>=7.2.2",
]
# Note: Browser automation requires agent-browser CLI: npm install -g agent-browser

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
lethe = "lethe.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lethe"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

# Use CPU-only PyTorch (saves ~2GB download, CUDA not needed for embeddings)
[tool.uv]
index = [
    { name = "pytorch-cpu", url = "https://download.pytorch.org/whl/cpu", explicit = true }
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
